[project]
name = "dno-fastapi-async"
version = "0.1.0"
description = ""
authors = [
    {name = "marilzon", email = "maxmaril@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "fastapi[standard]>=0.120.1,<0.121.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest>=8.4.2,<9.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    "taskipy>=1.14.1,<2.0.0",
    "ruff>=0.14.2,<0.15.0"
]

[tool.pytest.ini_options]
pythonpath = "."

[tool.ruff]
line-length = 79

[tool.ruff.lint]
preview = true

[tool.ruff.format]
preview = true

[tool.taskipy.tasks]
dev = "poetry run fastapi dev dno_fastapi_async/app.py"
lint = "ruff check"
pre_format = "ruff check --fix"
format = "ruff format"
pre_test = "task lint"
test = "pytest -s -x --cov=dno_fastapi_async -vv"
post_test = "coverage html"
